test/expected/perr_unterminated_param_expansion.out
shit: 3:1: error: Unterminated variable expansion.
     3 |  
       |  ^~ here.
shit: 2:11: note:
     2 |  echo ${abc
       |            ^~ Expected } here.
